hphp/hack/test/typecheck/capitalization5.php.exp
File "capitalization5.php", line 6, characters 10-18:
Could not find cAMELcASE (Naming[2006])
File "capitalization5.php", line 3, characters 10-18:
Did you mean CamelCase?
