hphp/hack/test/typecheck/capitalization5.php
<?hh

function CamelCase(int $x): void {}

function test(): void {
  return cAMELcASE();
}
